src/tests/ci/assignment_5_functions/valid/10_function_const_param.c
#include <stdio.h>

void display(const int value) {
    printf("%d", value);
}

int main() {
    display(100);
    return 0;
}