src/tests/ci/assignment_5_functions/invalid_semantic/13_return_value_in_void.c
void print_num(int x) {
    printf("%d\n", x);
    return 42;  // void function returning value
}

int main() {
    print_num(5);
    return 0;
}